--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Java (Indonesia) -- Description and travel'
 - !lcc 'DS'
 - !lcsh 'Sarawak -- Description and travel'
+- GITenberg
 title: On the Equator
 url: http://www.gutenberg.org/ebooks/27503
